--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+*,*::before,*::after {box-sizing: inherit;}
+
+html{
+  box-sizing: border-box;
+}
+
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,7 +13,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+   -ms-overflow-style: none;
+   scrollbar-width: none;
 }
+
+body::-webkit-scrollbar{
+  display: none;
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
